# WhiskeySour

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  project_plan.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: release.yml
crates/whiskysour-core/: Cargo.toml
crates/whiskysour-core/benches/: find.rs  parse.rs
crates/whiskysour-core/src/: document.rs  lib.rs  node.rs
crates/whiskysour-core/src/parser/: html.rs  mod.rs
crates/whiskysour-core/src/query/: find.rs  mod.rs
crates/whiskysour-core/src/selector/: matcher.rs  mod.rs  parser.rs
crates/whiskysour-core/src/serialize/: html.rs  mod.rs
crates/whiskysour-core/src/traversal/: iter.rs  mod.rs
crates/whiskysour-py/: Cargo.toml
crates/whiskysour-py/src/: lib.rs
docs/: whiskysour-overview.html
examples/: scrape.py
python/whiskeysour/: __init__.py  _core.pyi
python/whiskysour/: __init__.py  _core.pyi
tests/python/: conftest.py
tests/python/fixtures/: deeply_nested.html  large_100k_nodes.html  malformed.html  simple.html  unicode_heavy.html
tests/python/fuzz/: fuzz_parser.py
tests/python/integration/: test_bs4_compat.py
tests/python/performance/: bench_comparison.py  bench_find.py  bench_malformed.py  bench_memory.py  bench_parse.py
tests/python/unit/: test_css_selectors.py  test_edge_cases.py  test_encoding.py  test_find.py  test_malformed_html.py  test_modification.py  test_output.py  test_parsing.py  test_streaming.py  test_tree_navigation.py
