[workspace]
members = [
    "crates/whiskysour-core",
    "crates/whiskysour-py",
]
resolver = "2"

[workspace.package]
version     = "0.1.4"
edition     = "2021"
authors     = ["WhiskeySour Contributors"]
license     = "MIT"
repository  = "https://github.com/example/whiskysour"

[profile.release]
opt-level   = 3
lto         = "thin"
codegen-units = 1
strip       = "symbols"

[profile.dev]
opt-level   = 1          # faster incremental dev builds
