[build-system]
requires      = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name            = "whiskeysour"
version         = "0.1.1"
description     = "High-performance BeautifulSoup replacement written in Rust"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"
keywords        = ["html", "parser", "beautifulsoup", "scraping", "rust"]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark", "hypothesis", "beautifulsoup4", "lxml"]

[tool.maturin]
# Build the whiskysour-py crate (which contains the PyO3 extension)
manifest-path   = "crates/whiskysour-py/Cargo.toml"
# Pure-Python wrapper lives here; maturin copies it into the wheel
python-source   = "python"
module-name     = "whiskeysour._core"
features        = ["pyo3/extension-module"]
